--- a/.github/workflows/ci_cd_backend.yaml
+++ b/.github/workflows/ci_cd_backend.yaml
@@ -12,6 +12,5 @@ jobs:
         uses: docker/login-action@v2
         with: 
           username: ${{secrets.DOCKERHUB_USERNAME}}
-          password: ${{secrets.DOCKERHUB_PASSWORD}}
-      - name:  
+          password: ${{secrets.DOCKER_TOKEN}}
     
