--- a/.github/workflows/ci_cd_backend.yaml
+++ b/.github/workflows/ci_cd_backend.yaml
@@ -1,4 +1,4 @@
-name : CI CD BACKEND
+name: CI CD BACKEND
 on:
   push:
     branches: [main]
@@ -10,7 +10,13 @@ jobs:
         uses: actions/checkout@v2
       - name: Docker login
         uses: docker/login-action@v2
-        with: 
+        with:
           username: ${{secrets.DOCKERHUB_USERNAME}}
           password: ${{secrets.DOCKER_TOKEN}}
-      
+      - name: Pushing to Docker hub
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          file: ./docker/Dockerfile.backend
+          push: true
+          tags: rajulthakur/todo-app: ${{github.sha}}
