fix(ci-cd): remove space in Docker image tag format

--- a/.github/workflows/ci_cd_backend.yaml
+++ b/.github/workflows/ci_cd_backend.yaml
@@ -19,4 +19,5 @@ jobs:
           context: .
           file: ./Docker/Dockerfile.backend
           push: true
-          tags: rajulthakur/todo-app: ${{github.sha}}
+          tags: rajulthakur/todo-app:${{ github.sha }}
+      ## Step to deploy
